# bricka

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci-cd.yml
src/bricka/: attrs.py  conflicts.py  elements.py  node.py  style.py  stylesheet.py
tests/: attr_test.py  container_test.py  elements_attrs_test.py  elements_test.py  foo_elements.py  node_test.py  root_test.py  rule_test.py  test_test.py  text_test.py  void_test.py
