[tool.poetry]
name = "bricka"
version = "0.1.0"
description = "Build reusable styled HTML components with python."
authors = ["Said Atta <saidattaenp@yahoo.fr>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
