[tool.poetry]
name = "bricka"
version = "0.1.11"
description = "Build reusable styled HTML components with python."
authors = ["Said Atta <saidattaenp@yahoo.fr>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-cov = "^4.1.0"
python-semantic-release = "^9.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
version_toml = [
    "pyproject.toml:tool.poetry.version",
]

branch = "main" 
changelog_file = "CHANGELOG.md"
build_command = "pip install poetry && poetry build"
